# Byte-Buffer

./: CMakeLists.txt  LICENSE  README.md
include/: buffer.h  memory.h
include/bytebuffer/: ByteBuffer.h  ReadBuffer.h  buffer.h  endian.inl
src/: ByteBuffer.cpp  ReadBuffer.cpp  buffer.cpp
test/: content.h  memory_validation.cpp  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp
